small layout issue

--- a/src/style/SideBar.css
+++ b/src/style/SideBar.css
@@ -424,7 +424,7 @@
     accent-color: var(--text-dark);
 }
 .LEFTSB__option-slider{
-    max-width: 7em;
+    max-width: 5em;
     margin-left: 15px;
 }
 
